New: Additional work performed on acquiring the game winning percentages.

--- a/bin/modelling/model_four.ipynb
+++ b/bin/modelling/model_four.ipynb
@@ -61,6 +61,7 @@
    "source": [
     "# Get all the game ids with the relevent information attributed to those id. Ensure to get games past May 15.\n",
     "# The games are returned from earliest played to most recent.\n",
+    "# The 0 at the end indicates a home team victory.\n",
     "game_outcomes = qu_vTwo.get_game_outcomes(day=15, month=5)            \n",
     "game_outcomes = game_outcomes[200:]\n",
     "game_outcomes[0:5]"
@@ -68,21 +69,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[('BOS199004090', 1990, 9, 4, 5, 2, 'BOS', 'DET', 0),\n ('CAL199004090', 1990, 9, 4, 4, 7, 'CAL', 'SEA', 1),\n ('CHA199004090', 1990, 9, 4, 2, 1, 'CHA', 'MIL', 0),\n ('HOU199004090', 1990, 9, 4, 4, 8, 'HOU', 'CIN', 1),\n ('KCA199004090', 1990, 9, 4, 6, 7, 'KCA', 'BAL', 1),\n ('LAN199004090', 1990, 9, 4, 4, 2, 'LAN', 'SDN', 0),\n ('NYN199004090', 1990, 9, 4, 3, 12, 'NYN', 'PIT', 1),\n ('OAK199004090', 1990, 9, 4, 8, 3, 'OAK', 'MIN', 0),\n ('SLN199004090', 1990, 9, 4, 5, 5, 'SLN', 'MON', 0),\n ('TEX199004090', 1990, 9, 4, 4, 2, 'TEX', 'TOR', 0),\n ('BOS199004100', 1990, 10, 4, 4, 2, 'BOS', 'DET', 0),\n ('CAL199004100', 1990, 10, 4, 7, 0, 'CAL', 'SEA', 0),\n ('CHN199004100', 1990, 10, 4, 2, 1, 'CHN', 'PHI', 0),\n ('HOU199004100', 1990, 10, 4, 2, 3, 'HOU', 'CIN', 1),\n ('MIL199004100', 1990, 10, 4, 3, 5, 'MIL', 'CHA', 1)]"
+     },
+     "metadata": {},
+     "execution_count": 28
+    }
+   ],
    "source": [
     "# Get the outcomes of all the games.\n",
-    "game_outcomes_all = qu_vTwo.get_game_outcomes() "
+    "game_outcomes_all = qu_vTwo.get_game_outcomes()\n",
+    "len(game_outcomes_all)\n",
+    "game_outcomes_all[:15]   ##### REMOVE MEE "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(game_outcomes_all)"
+    "def _get_last_n_games_pct(game_outcomes_window, num_games):\n",
+    "\n",
+    "    \"\"\" Function Description: Get the winning percentage of the participating teams of the last n games.\n",
+    "        DO NOT INCLUDE the current game within the winning percentage since we are unaware of this outcome at\n",
+    "        the point of the record.\n",
+    "    # Function Parameters: game_outcomes_window (List: The outcomes of the up until the current game.), \n",
+    "        num_games (Int: The number of games to go back.)\n",
+    "    # Function Throws: Nothing\n",
+    "    # Function Returns: (Dict: Containing the teams who participated in the game with their respective winning percentages.)\"\"\"\n",
+    "\n",
+    "    most_recent_game = game_outcomes_window[-1]              # A sample record: ('BOS199004090', 1990, 9, 4, 5, 2, 'BOS', 'DET', 0)\n",
+    "    game_id = most_recent_game[0]\n",
+    "    home_team = most_recent_game[7]\n",
+    "    vis_team = most_recent_game[8]\n",
+    "    if len(game_outcomes_window) == 1:\n",
+    "        return {game_id: {home_team: 0.0, vis_team: 0.0}}\n",
+    "    for game in reversed(game_outcomes_window[:-1]):         # Start after the most recent game since that is what we are analysing.\n",
+    "        pass\n",
+    "\n",
+    "def get_win_pct(game_outcomes, num_games=12):\n",
+    "\n",
+    "    \"\"\" Function Description: Finding the winning percentage of the participating teams for the last x games.\n",
+    "    # Function Parameters: game_outcomes (List: A list of tuples containing the game outcomes of each game.)\n",
+    "    #    num_games (Int: The number of games going back)\n",
+    "    # Function Throws: Nothing\n",
+    "    # Function Returns: (Dict: The dictionary identified by the game id and the win percentage of each team.)\"\"\"\n",
+    "\n",
+    "    team_win_pcts = {}\n",
+    "    current_year = 1990\n",
+    "    ending_year = 2019\n",
+    "    current_game = 0\n",
+    "    while current_year <= 2019:\n",
+    "        game_pct_attributes = {}\n",
+    "        for num, outcome in enumerate(game_outcomes):               \n",
+    "            if outcome[1] != current_year: break           # Only the record of a team in the same year is relavent. (outcome[1] = game year)\n",
+    "            game_pct_attributes[outcome[0]] = _get_last_n_games_pct(game_outcomes[: num + 1], num_games)\n",
+    "            if num > 5: break #### REMOVE ME\n",
+    "        break ##### REMOVE ME\n",
+    "        current_year += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "[('BOS199004090', 1990, 9, 4, 5, 2, 'BOS', 'DET', 0)]\n[('BOS199004090', 1990, 9, 4, 5, 2, 'BOS', 'DET', 0), ('CAL199004090', 1990, 9, 4, 4, 7, 'CAL', 'SEA', 1)]\n[('BOS199004090', 1990, 9, 4, 5, 2, 'BOS', 'DET', 0), ('CAL199004090', 1990, 9, 4, 4, 7, 'CAL', 'SEA', 1), ('CHA199004090', 1990, 9, 4, 2, 1, 'CHA', 'MIL', 0)]\n[('BOS199004090', 1990, 9, 4, 5, 2, 'BOS', 'DET', 0), ('CAL199004090', 1990, 9, 4, 4, 7, 'CAL', 'SEA', 1), ('CHA199004090', 1990, 9, 4, 2, 1, 'CHA', 'MIL', 0), ('HOU199004090', 1990, 9, 4, 4, 8, 'HOU', 'CIN', 1)]\n[('BOS199004090', 1990, 9, 4, 5, 2, 'BOS', 'DET', 0), ('CAL199004090', 1990, 9, 4, 4, 7, 'CAL', 'SEA', 1), ('CHA199004090', 1990, 9, 4, 2, 1, 'CHA', 'MIL', 0), ('HOU199004090', 1990, 9, 4, 4, 8, 'HOU', 'CIN', 1), ('KCA199004090', 1990, 9, 4, 6, 7, 'KCA', 'BAL', 1)]\n[('BOS199004090', 1990, 9, 4, 5, 2, 'BOS', 'DET', 0), ('CAL199004090', 1990, 9, 4, 4, 7, 'CAL', 'SEA', 1), ('CHA199004090', 1990, 9, 4, 2, 1, 'CHA', 'MIL', 0), ('HOU199004090', 1990, 9, 4, 4, 8, 'HOU', 'CIN', 1), ('KCA199004090', 1990, 9, 4, 6, 7, 'KCA', 'BAL', 1), ('LAN199004090', 1990, 9, 4, 4, 2, 'LAN', 'SDN', 0)]\n[('BOS199004090', 1990, 9, 4, 5, 2, 'BOS', 'DET', 0), ('CAL199004090', 1990, 9, 4, 4, 7, 'CAL', 'SEA', 1), ('CHA199004090', 1990, 9, 4, 2, 1, 'CHA', 'MIL', 0), ('HOU199004090', 1990, 9, 4, 4, 8, 'HOU', 'CIN', 1), ('KCA199004090', 1990, 9, 4, 6, 7, 'KCA', 'BAL', 1), ('LAN199004090', 1990, 9, 4, 4, 2, 'LAN', 'SDN', 0), ('NYN199004090', 1990, 9, 4, 3, 12, 'NYN', 'PIT', 1)]\n"
+    }
+   ],
+   "source": [
+    "get_win_pct(game_outcomes_all)"
    ]
   },
   {
