New: Building out functionality for n_pct values

--- a/bin/modelling/model_four.ipynb
+++ b/bin/modelling/model_four.ipynb
@@ -108,10 +108,24 @@
     "    game_id = most_recent_game[0]\n",
     "    home_team = most_recent_game[7]\n",
     "    vis_team = most_recent_game[8]\n",
-    "    if len(game_outcomes_window) == 1:\n",
+    "    current_record = {}\n",
+    "    home_games_factored = 0\n",
+    "    vis_games_factored = 0\n",
+    "    if len(game_outcomes_window) == 1:                       # There is nothing we can do at the beginning of the season.\n",
     "        return {game_id: {home_team: 0.0, vis_team: 0.0}}\n",
     "    for game in reversed(game_outcomes_window[:-1]):         # Start after the most recent game since that is what we are analysing.\n",
-    "        pass\n",
+    "        game_home_team = game[7]\n",
+    "        game_vis_team = game[8]\n",
+    "        if ((home_team == game_home_team) and (home_games_factored < num_games)):      # Check if the HOME team participated in the games past.\n",
+    "            pass\n",
+    "        elif ((home_team == game_vis_team) and (home_games_factored < num_games)):\n",
+    "            pass\n",
+    "        if ((vis_team == game_home_team) and (vis_games_factored < num_games)):      # Check if the VIS team participated in the games past.\n",
+    "            pass\n",
+    "        elif ((vis_team == game_vis_team) and (vis_games_factored < num_games)):\n",
+    "            pass\n",
+    "        if ((vis_games_factored >= num_games) and (vis_games_factored >= num_games)):\n",
+    "            return current_record     #### ENSURE LOGIC IS SOUND, DATA FORMATTED CORRECTLY   End when all the games are accounted for.\n",
     "\n",
     "def get_win_pct(game_outcomes, num_games=12):\n",
     "\n",
