In Progress: Additional builing out of the get_win_pct

--- a/bin/modelling/model_four.ipynb
+++ b/bin/modelling/model_four.ipynb
@@ -90,10 +90,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def _calc_win_pct(current_record):\n",
+    "\n",
+    "    \"\"\" Function Description: Calculate the win percentage of the teams within the dictionary.\n",
+    "    # Function Parameters: current_record (Dict: The record of the participating teams.) \n",
+    "    # Function Throws: Nothing\n",
+    "    # Function Returns: current_record (Dict: The record of the participating teams. However, the changes will be applied.) \"\"\"\n",
+    "\n",
+    "    for team, record in current_record.items():\n",
+    "        if record[1] != 0:\n",
+    "            current_record[team] = record[0] / record[1]\n",
+    "        else:\n",
+    "            current_record[team] = 0.0 \n",
+    "    return current_record\n",
+    "\n",
+    "def _add_games(current_record, team, home_advantage, game_outcome):\n",
+    "\n",
+    "    \"\"\" Function Description: Help insert a game into the current_record dictionary. There is some logic that is repeated and better modulated\n",
+    "        within a distinct function.\n",
+    "    # Function Parameters: current_record (Dict: The current record of both teams within the most recent event.), \n",
+    "    #     team (String: The team to update.), home_advantage (Boolean: An indicator of either being home or away.), \n",
+    "    #     game_outcome (Int: An indication of whether the home team has won.).\n",
+    "    # Function Throws: Nothing\n",
+    "    # Function Returns: Nothing - We are making the change of current record at the point of reference. \"\"\"\n",
+    "\n",
+    "    if home_advantage == True:\n",
+    "        if game_outcome == 0:                # Remember, a 0 indicates that the home team has won.\n",
+    "            current_record[team][0] += 1     # Record whether the team has won, else add that a game has been played.\n",
+    "            current_record[team][1] += 1\n",
+    "        else: \n",
+    "            current_record[team][1] += 1\n",
+    "    else:\n",
+    "        if game_outcome == 0:                # Visitors will experience the opposite logic.\n",
+    "            current_record[team][1] += 1\n",
+    "        else:\n",
+    "            current_record[team][0] += 1 \n",
+    "            current_record[team][1] += 1\n",
+    "\n",
     "def _get_last_n_games_pct(game_outcomes_window, num_games):\n",
     "\n",
     "    \"\"\" Function Description: Get the winning percentage of the participating teams of the last n games.\n",
@@ -111,21 +148,24 @@
     "    current_record = {}\n",
     "    home_games_factored = 0\n",
     "    vis_games_factored = 0\n",
+    "    current_record[home_team] = (0, 0)                       # Ensure that the team is inserted into the dictionary.\n",
+    "    current_record[vis_team] = (0, 0)\n",
     "    if len(game_outcomes_window) == 1:                       # There is nothing we can do at the beginning of the season.\n",
     "        return {game_id: {home_team: 0.0, vis_team: 0.0}}\n",
     "    for game in reversed(game_outcomes_window[:-1]):         # Start after the most recent game since that is what we are analysing.\n",
     "        game_home_team = game[7]\n",
     "        game_vis_team = game[8]\n",
-    "        if ((home_team == game_home_team) and (home_games_factored < num_games)):      # Check if the HOME team participated in the games past.\n",
-    "            pass\n",
+    "        if ((home_team == game_home_team) and (home_games_factored < num_games)):       # Check if the HOME team participated in the games past.\n",
+    "            _add_games(current_record, home_team, True, game[-1])\n",
     "        elif ((home_team == game_vis_team) and (home_games_factored < num_games)):\n",
-    "            pass\n",
-    "        if ((vis_team == game_home_team) and (vis_games_factored < num_games)):      # Check if the VIS team participated in the games past.\n",
-    "            pass\n",
+    "            _add_games(current_record, home_team, False, game[-1])\n",
+    "        if ((vis_team == game_home_team) and (vis_games_factored < num_games)):         # Check if the VIS team participated in the games past.\n",
+    "            _add_games(current_record, vis_team, False, game[-1])\n",
     "        elif ((vis_team == game_vis_team) and (vis_games_factored < num_games)):\n",
-    "            pass\n",
+    "            _add_games(current_record, vis_team, True, game[-1])\n",
     "        if ((vis_games_factored >= num_games) and (vis_games_factored >= num_games)):\n",
-    "            return current_record     #### ENSURE LOGIC IS SOUND, DATA FORMATTED CORRECTLY   End when all the games are accounted for.\n",
+    "            return _calc_win_pct(current_record)                                        # End when all the games are accounted for.\n",
+    "    return _calc_win_pct(current_record)                                                # If reached, the team did not play n games.\n",
     "\n",
     "def get_win_pct(game_outcomes, num_games=12):\n",
     "\n",
@@ -151,15 +191,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "[('BOS199004090', 1990, 9, 4, 5, 2, 'BOS', 'DET', 0)]\n[('BOS199004090', 1990, 9, 4, 5, 2, 'BOS', 'DET', 0), ('CAL199004090', 1990, 9, 4, 4, 7, 'CAL', 'SEA', 1)]\n[('BOS199004090', 1990, 9, 4, 5, 2, 'BOS', 'DET', 0), ('CAL199004090', 1990, 9, 4, 4, 7, 'CAL', 'SEA', 1), ('CHA199004090', 1990, 9, 4, 2, 1, 'CHA', 'MIL', 0)]\n[('BOS199004090', 1990, 9, 4, 5, 2, 'BOS', 'DET', 0), ('CAL199004090', 1990, 9, 4, 4, 7, 'CAL', 'SEA', 1), ('CHA199004090', 1990, 9, 4, 2, 1, 'CHA', 'MIL', 0), ('HOU199004090', 1990, 9, 4, 4, 8, 'HOU', 'CIN', 1)]\n[('BOS199004090', 1990, 9, 4, 5, 2, 'BOS', 'DET', 0), ('CAL199004090', 1990, 9, 4, 4, 7, 'CAL', 'SEA', 1), ('CHA199004090', 1990, 9, 4, 2, 1, 'CHA', 'MIL', 0), ('HOU199004090', 1990, 9, 4, 4, 8, 'HOU', 'CIN', 1), ('KCA199004090', 1990, 9, 4, 6, 7, 'KCA', 'BAL', 1)]\n[('BOS199004090', 1990, 9, 4, 5, 2, 'BOS', 'DET', 0), ('CAL199004090', 1990, 9, 4, 4, 7, 'CAL', 'SEA', 1), ('CHA199004090', 1990, 9, 4, 2, 1, 'CHA', 'MIL', 0), ('HOU199004090', 1990, 9, 4, 4, 8, 'HOU', 'CIN', 1), ('KCA199004090', 1990, 9, 4, 6, 7, 'KCA', 'BAL', 1), ('LAN199004090', 1990, 9, 4, 4, 2, 'LAN', 'SDN', 0)]\n[('BOS199004090', 1990, 9, 4, 5, 2, 'BOS', 'DET', 0), ('CAL199004090', 1990, 9, 4, 4, 7, 'CAL', 'SEA', 1), ('CHA199004090', 1990, 9, 4, 2, 1, 'CHA', 'MIL', 0), ('HOU199004090', 1990, 9, 4, 4, 8, 'HOU', 'CIN', 1), ('KCA199004090', 1990, 9, 4, 6, 7, 'KCA', 'BAL', 1), ('LAN199004090', 1990, 9, 4, 4, 2, 'LAN', 'SDN', 0), ('NYN199004090', 1990, 9, 4, 3, 12, 'NYN', 'PIT', 1)]\n"
+     "output_type": "error",
+     "ename": "ZeroDivisionError",
+     "evalue": "division by zero",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-30-76d2340ccf02>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mget_win_pct\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgame_outcomes_all\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-29-b18b3f507f6a>\u001b[0m in \u001b[0;36mget_win_pct\u001b[1;34m(game_outcomes, num_games)\u001b[0m\n\u001b[0;32m     74\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mnum\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0moutcome\u001b[0m \u001b[1;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgame_outcomes\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     75\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0moutcome\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[0mcurrent_year\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;32mbreak\u001b[0m           \u001b[1;31m# Only the record of a team in the same year is relavent. (outcome[1] = game year)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 76\u001b[1;33m             \u001b[0mgame_pct_attributes\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0moutcome\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_get_last_n_games_pct\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgame_outcomes\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mnum\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnum_games\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     77\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mnum\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m5\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;32mbreak\u001b[0m \u001b[1;31m#### REMOVE ME\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     78\u001b[0m         \u001b[1;32mbreak\u001b[0m \u001b[1;31m##### REMOVE ME\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-29-b18b3f507f6a>\u001b[0m in \u001b[0;36m_get_last_n_games_pct\u001b[1;34m(game_outcomes_window, num_games)\u001b[0m\n\u001b[0;32m     56\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvis_games_factored\u001b[0m \u001b[1;33m>=\u001b[0m \u001b[0mnum_games\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mand\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mvis_games_factored\u001b[0m \u001b[1;33m>=\u001b[0m \u001b[0mnum_games\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     57\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[1;33m{\u001b[0m\u001b[0mteam\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mrecord\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m/\u001b[0m \u001b[0mrecord\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mteam\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrecord\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mcurrent_record\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m}\u001b[0m  \u001b[1;31m# End when all the games are accounted for.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 58\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[1;33m{\u001b[0m\u001b[0mteam\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mrecord\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m/\u001b[0m \u001b[0mrecord\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mteam\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrecord\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mcurrent_record\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m}\u001b[0m          \u001b[1;31m# If reached, the team did not play n games.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     59\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     60\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mget_win_pct\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgame_outcomes\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnum_games\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m12\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-29-b18b3f507f6a>\u001b[0m in \u001b[0;36m<dictcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m     56\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvis_games_factored\u001b[0m \u001b[1;33m>=\u001b[0m \u001b[0mnum_games\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mand\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mvis_games_factored\u001b[0m \u001b[1;33m>=\u001b[0m \u001b[0mnum_games\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     57\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[1;33m{\u001b[0m\u001b[0mteam\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mrecord\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m/\u001b[0m \u001b[0mrecord\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mteam\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrecord\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mcurrent_record\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m}\u001b[0m  \u001b[1;31m# End when all the games are accounted for.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 58\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[1;33m{\u001b[0m\u001b[0mteam\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mrecord\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m/\u001b[0m \u001b[0mrecord\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mteam\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrecord\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mcurrent_record\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m}\u001b[0m          \u001b[1;31m# If reached, the team did not play n games.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     59\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     60\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mget_win_pct\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgame_outcomes\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnum_games\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m12\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mZeroDivisionError\u001b[0m: division by zero"
+     ]
     }
    ],
    "source": [
