Fix: Multiple bugs in the game pct function including: 1. Games were not always added correctly. 2. Games were not being filtered. 3. The function was not being exited correctly. 4. Teams were incorrectly selected.

--- a/bin/modelling/model_four.ipynb
+++ b/bin/modelling/model_four.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,27 +143,33 @@
     "\n",
     "    most_recent_game = game_outcomes_window[-1]              # A sample record: ('BOS199004090', 1990, 9, 4, 5, 2, 'BOS', 'DET', 0)\n",
     "    game_id = most_recent_game[0]\n",
-    "    home_team = most_recent_game[7]\n",
-    "    vis_team = most_recent_game[8]\n",
+    "    home_team = most_recent_game[6]\n",
+    "    vis_team = most_recent_game[7]\n",
     "    current_record = {}\n",
     "    home_games_factored = 0\n",
     "    vis_games_factored = 0\n",
-    "    current_record[home_team] = (0, 0)                       # Ensure that the team is inserted into the dictionary.\n",
-    "    current_record[vis_team] = (0, 0)\n",
+    "    current_record[home_team] = [0, 0]                       # Ensure that the team is inserted into the dictionary.\n",
+    "    current_record[vis_team] = [0, 0]\n",
     "    if len(game_outcomes_window) == 1:                       # There is nothing we can do at the beginning of the season.\n",
     "        return {game_id: {home_team: 0.0, vis_team: 0.0}}\n",
     "    for game in reversed(game_outcomes_window[:-1]):         # Start after the most recent game since that is what we are analysing.\n",
-    "        game_home_team = game[7]\n",
-    "        game_vis_team = game[8]\n",
+    "        game_home_team = game[6]\n",
+    "        game_vis_team = game[7]\n",
     "        if ((home_team == game_home_team) and (home_games_factored < num_games)):       # Check if the HOME team participated in the games past.\n",
     "            _add_games(current_record, home_team, True, game[-1])\n",
+    "            home_games_factored += 1                                                    # Count that the game has been factored.\n",
     "        elif ((home_team == game_vis_team) and (home_games_factored < num_games)):\n",
     "            _add_games(current_record, home_team, False, game[-1])\n",
+    "            home_games_factored += 1\n",
     "        if ((vis_team == game_home_team) and (vis_games_factored < num_games)):         # Check if the VIS team participated in the games past.\n",
     "            _add_games(current_record, vis_team, False, game[-1])\n",
+    "            vis_games_factored += 1\n",
     "        elif ((vis_team == game_vis_team) and (vis_games_factored < num_games)):\n",
     "            _add_games(current_record, vis_team, True, game[-1])\n",
-    "        if ((vis_games_factored >= num_games) and (vis_games_factored >= num_games)):\n",
+    "            vis_games_factored += 1\n",
+    "        if ((home_games_factored >= num_games) and (vis_games_factored >= num_games)):\n",
+    "            if game_id == 'BAL199510010':\n",
+    "                print(current_record)\n",
     "            return _calc_win_pct(current_record)                                        # End when all the games are accounted for.\n",
     "    return _calc_win_pct(current_record)                                                # If reached, the team did not play n games.\n",
     "\n",
@@ -177,42 +183,42 @@
     "\n",
     "    team_win_pcts = {}\n",
     "    current_year = 1990\n",
-    "    ending_year = 2019\n",
     "    current_game = 0\n",
+    "    game_pct_attributes = {}\n",
     "    while current_year <= 2019:\n",
-    "        game_pct_attributes = {}\n",
-    "        for num, outcome in enumerate(game_outcomes):               \n",
-    "            if outcome[1] != current_year: break           # Only the record of a team in the same year is relavent. (outcome[1] = game year)\n",
-    "            game_pct_attributes[outcome[0]] = _get_last_n_games_pct(game_outcomes[: num + 1], num_games)\n",
-    "            if num > 5: break #### REMOVE ME\n",
-    "        break ##### REMOVE ME\n",
-    "        current_year += 1"
+    "        year_game_outcomes = [outcome for outcome in game_outcomes if outcome[1] == current_year]   # Only the record of a team in the same year is relavent. (outcome[1] = game year)\n",
+    "        for num, outcome in enumerate(year_game_outcomes):               \n",
+    "            game_pct_attributes[outcome[0]] = _get_last_n_games_pct(year_game_outcomes[: num + 1], num_games)\n",
+    "            #if num > 50: break #### REMOVE ME\n",
+    "        #break ##### REMOVE ME\n",
+    "        current_year += 1\n",
+    "    return game_pct_attributes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 76,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "ZeroDivisionError",
-     "evalue": "division by zero",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-30-76d2340ccf02>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mget_win_pct\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgame_outcomes_all\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-29-b18b3f507f6a>\u001b[0m in \u001b[0;36mget_win_pct\u001b[1;34m(game_outcomes, num_games)\u001b[0m\n\u001b[0;32m     74\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mnum\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0moutcome\u001b[0m \u001b[1;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgame_outcomes\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     75\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0moutcome\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[0mcurrent_year\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;32mbreak\u001b[0m           \u001b[1;31m# Only the record of a team in the same year is relavent. (outcome[1] = game year)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 76\u001b[1;33m             \u001b[0mgame_pct_attributes\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0moutcome\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_get_last_n_games_pct\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgame_outcomes\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mnum\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnum_games\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     77\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mnum\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m5\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;32mbreak\u001b[0m \u001b[1;31m#### REMOVE ME\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     78\u001b[0m         \u001b[1;32mbreak\u001b[0m \u001b[1;31m##### REMOVE ME\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-29-b18b3f507f6a>\u001b[0m in \u001b[0;36m_get_last_n_games_pct\u001b[1;34m(game_outcomes_window, num_games)\u001b[0m\n\u001b[0;32m     56\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvis_games_factored\u001b[0m \u001b[1;33m>=\u001b[0m \u001b[0mnum_games\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mand\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mvis_games_factored\u001b[0m \u001b[1;33m>=\u001b[0m \u001b[0mnum_games\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     57\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[1;33m{\u001b[0m\u001b[0mteam\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mrecord\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m/\u001b[0m \u001b[0mrecord\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mteam\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrecord\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mcurrent_record\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m}\u001b[0m  \u001b[1;31m# End when all the games are accounted for.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 58\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[1;33m{\u001b[0m\u001b[0mteam\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mrecord\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m/\u001b[0m \u001b[0mrecord\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mteam\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrecord\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mcurrent_record\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m}\u001b[0m          \u001b[1;31m# If reached, the team did not play n games.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     59\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     60\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mget_win_pct\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgame_outcomes\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnum_games\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m12\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-29-b18b3f507f6a>\u001b[0m in \u001b[0;36m<dictcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m     56\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvis_games_factored\u001b[0m \u001b[1;33m>=\u001b[0m \u001b[0mnum_games\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mand\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mvis_games_factored\u001b[0m \u001b[1;33m>=\u001b[0m \u001b[0mnum_games\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     57\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[1;33m{\u001b[0m\u001b[0mteam\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mrecord\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m/\u001b[0m \u001b[0mrecord\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mteam\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrecord\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mcurrent_record\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m}\u001b[0m  \u001b[1;31m# End when all the games are accounted for.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 58\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[1;33m{\u001b[0m\u001b[0mteam\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mrecord\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m/\u001b[0m \u001b[0mrecord\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mteam\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrecord\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mcurrent_record\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m}\u001b[0m          \u001b[1;31m# If reached, the team did not play n games.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     59\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     60\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mget_win_pct\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgame_outcomes\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnum_games\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m12\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mZeroDivisionError\u001b[0m: division by zero"
-     ]
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "{'BAL': [10, 12], 'DET': [8, 12]}\n"
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "{'BAL': 0.8333333333333334, 'DET': 0.6666666666666666}"
+     },
+     "metadata": {},
+     "execution_count": 76
     }
    ],
    "source": [
-    "get_win_pct(game_outcomes_all)"
+    "result = get_win_pct(game_outcomes_all)\n",
+    "result['BAL199510010']                   #### ERROR HERE, WHY IS THERE A ONE?"
    ]
   },
   {
